[project]
name = "object-detection"
version = "0.1.0"
description = "End-to-end object detection pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.10.0 ; sys_platform == 'linux' or sys_platform == 'win32'",
    "torchvision>=0.25.0 ; sys_platform == 'linux' or sys_platform == 'win32'",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "object_detection"
module-root = ""

# route torch and torchvision to CUDA index when Linux/Windows (when GPU extra is selected)
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform=='linux' or sys_platform=='win32'" },
]
torchvision = [
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform=='linux' or sys_platform=='win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true